# club_project

./: .gitignore
backend/: pyproject.toml
backend/api/: admin.py  models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_activity_albums_article_experience_indexstory_and_more.py  0003_alter_activity_price.py  0004_teacher_image.py  0005_rename_price_activity_price_type.py  0006_rename_albums_album.py  0007_alter_activity_options_alter_album_options_and_more.py  0008_album_description_album_tag_alter_article_content_and_more.py  0009_article_tag.py  0010_remove_article_tag_article_tags.py  0011_remove_album_tag_album_tags_and_more.py  0012_alter_experience_date_alter_experience_experience.py  0013_alter_indexstory_options_alter_teacher_options_and_more.py  0014_video_tags_alter_album_tags_alter_article_tags.py
backend/backend_project/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  textFile.js
frontend/src/components/: ArticleCard.jsx  Calendar.jsx  FloatBtn.jsx  Foot.jsx  IndexStory.jsx  Navbar.jsx  Pagenation.jsx  SearchBar.jsx  SeatsImage.jsx  SecondStep.jsx  Sidebar.jsx  ThirdStep.jsx  TitleComponent.jsx
frontend/src/pages/: Contact.jsx  FontLayout.jsx
frontend/src/pages/Activities/: ActivitiesPage.jsx  ActivityComponent.jsx  ActivityTicket.jsx
frontend/src/pages/Albums/: AlbumComponent.jsx  AlbumDetail.jsx  AlbumsPage.jsx
frontend/src/pages/Homepage/: Home.jsx
frontend/src/pages/Intro/: Conductors.jsx  Experiences.jsx  Intro.jsx  IntroHome.jsx  Teachers.jsx
(+37 files in other folders)
